# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\StaffController;
 
 /*
 |--------------------------------------------------------------------------
@@ -14,16 +15,25 @@ use App\Http\Controllers\AuthController;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
+Route::prefix('/admin')->group( function () {
+    Route::middleware('auth:sanctum')->group(function (){
+        Route::get('/user', function (Request $request) {
+            return $request->user();
+        });
+        Route::post('/logout',[AuthController::class, 'logout']);
 
-Route::middleware('auth:sanctum')->group(function (){
-    Route::get('/user', function (Request $request) {
-        return $request->user();
+        Route::apiResource('/staffs', StaffController::class);
+
     });
-    Route::post('/logout',[AuthController::class, 'logout']);
+    
+    Route::post('/register',[AuthController::class, 'register']);
+    Route::post('/login',[AuthController::class, 'login']);
+
 });
 
-Route::post('/register',[AuthController::class, 'register']);
-Route::post('/login',[AuthController::class, 'login']);
+
+Route::post('/login-customer',[AuthController::class, 'loginCustomer']);
+
 
 Route::get('/testing-deploy',function(){
     return 'Hello Tu';
